GNOME Bugzilla – Bug 743858
[regression] Unredirect flash
Last modified: 2015-02-03 19:32:36 UTC
Created attachment 295948 [details] [review] Update composite overlay window before unredirecting When unredirecting a window, there is a flash as the background is repainted and client has to respond to an expose event. This is a regression from commit d6282716b2a64051fbb2b60705569b5f275471e3 Author: Jasper St. Pierre <jstpierre@mecheye.net> Date: Fri Dec 6 17:10:44 2013 -0500 compositor: Simplify the unredirected window management code https://bugzilla.gnome.org/show_bug.cgi?id=720631
Review of attachment 295948 [details] [review]: Looks good.
Review of attachment 295948 [details] [review]: Pushed as 72f5a36522 thanks.
*** Bug 740359 has been marked as a duplicate of this bug. ***
Great! :D